website/app/static/css/result.css
#ressearch {
  float:right;
}

.bolded-red {
  color: red;
  font-weight: bold;
}

.left-content {
  border: 1px solid;
  padding:10px 10px 10px 10px;
  //border-color:  #D3D3D3;
}

.indata-text{
  margin:0;
}

.dataTables_wrapper .dataTables_processing {
  top:40%;
  z-index: 1;
}

